deamonset.yml
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: nginx-aemost
  namespace: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      name: nginx-daeon-pod
      labels:
       app: nginx
    
    spec:
      containers:
       - name: nginx-con
         image:  nginx:latest
         ports:
           - containerPort: 80
