test_pv_pvc.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      name: nginx-dep-pod
      labels:
       app: nginx
    
    spec:
      containers:
       - name: nginx-con
         image:  nginx:latest
         ports:
           - containerPort: 80
         volumeMounts:
         - mountPath: /var/www/html
           name: my-vol
      volumes:
      - name: my-vol
        persistentVolumeClaim: 
         claimName: local-pvc
