mysqlsvc.yml
kind: Service
apiVersion: v1
metadata:
  name: mysql-svc
  namespace: mysql
spec:
  clusterIP: None
  selector:
   app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
